Fix spacing on comment form

--- a/src/styles/Comment.scss
+++ b/src/styles/Comment.scss
@@ -1,19 +1,16 @@
-.comment-section {
-  // margin-top: 50px;
-  padding: 10px;
-}
-
 .comments-header {
   text-align: left;
+  margin-bottom: 0;
+  font-size: 100%;
 }
 
 .comment {
   text-align: left;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #6c6ae5;
 }
 
 ul {
-  padding-bottom: 8px;
-  border-bottom: 1px solid #6c6ae5;
   list-style: none;
   text-align: left;
   padding-left: 0;
