--- a/src/styles/DiscussionCard.scss
+++ b/src/styles/DiscussionCard.scss
@@ -1,7 +1,7 @@
 .card {
   border-radius: 5px;
   background-color: #fff;
-  padding: 2.5% 2.5% 2.5% 2.5%;
+  padding: 1% 3% 2% 3%;
   margin-bottom: 2.5%;
 }
 
@@ -16,7 +16,7 @@
   text-align: left;
   margin: 0;
   display: inline-block;
-  font-size: 110%;
+  font-size: 115%;
 }
 
 .card-tag {
